--- a/index.html
+++ b/index.html
@@ -14,17 +14,50 @@
   <body>
     <section class="section">
       <div class="container">
-        <h1 class="title">Air Quality Near You!</h1>
+        <h1 class="title">Air Quality Data</h1>
         <p class="subtitle">
-          Let's see what the Air Quality is <strong>today</strong>!
+          Find your local Air Quality <strong>data</strong>!
         </p>
       </div>
-      <button class="button is-light" id="find">Check Air Quality</button>
-      
+      <div class="columns">
+        <div class="air-q"></div>
+      </div>
+        <input class="input is-rounded" id= "search-input"type="text" placeholder="Search City">
+      <button class="button is-light" id="check">Get Data</button>
     </section>
-    <hr>
-    <section>
-    <button class="button is-light" id="find">Find Hospitals</button>
+    <hr />
+    <section class="section-2">
+      <button class="button is-light" id="find">Find Hospitals</button>
+      <div class="container">
+        <h1 class="title">Hospital Finder</h1>
+        <p class="subtitle">
+          Closest hospitals near <strong>you</strong>!
+        </p>
+      </div>
+      <div class="hospital-list">
+        <table class="table">
+          <tr>
+            <th title="Name">Name</th>
+            <th title="Distance">Distance</th>
+            <th title="Contact Info">Contact Information</th>
+          </tr>
+          <tr>
+            <th class="name1"></th>
+            <th class="distance1"></th>
+            <th class="contact1"></th>
+          </tr>
+          <tr>
+            <th class="name2"></th>
+            <th class="distance2"></th>
+            <th class="contact2"></th>
+          </tr>
+          <tr>
+            <th class="name3"></th>
+            <th class="distance3"></th>
+            <th class="contact3"></th>
+          </tr>
+        </table>
+      </div>
     </section>
     <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
