--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="air-q"></div>
       </div>
         <input class="input is-rounded" id= "search-input"type="text" placeholder="Search City">
-      <button class="button is-light" id="check">Get Data</button>
+      <button class="button is-light btn" id="check">Get Data</button>
     </section>
     <hr />
     <section class="section-2">
-      <button class="button is-light" id="find">Find Hospitals</button>
+      <button class="button is-light btn" id="find">Find Hospitals</button>
       <div class="container">
         <h1 class="title">Hospital Finder</h1>
         <p class="subtitle">
