--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <input class="input is-rounded" id= "search-input"type="text" placeholder="Search City">
       <button class="button is-light btn" id="check">Get Data</button>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
 </html>
