Added content to js, worked on Air-Quality api data

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <option value="AZ">Arizona</option>
         <option value="AR">Arkansas</option>
         <option value="CA">California</option>
-        <option value="CO">Colorado</option>
+        <option value="Colorado">Colorado</option>
         <option value="CT">Connecticut</option>
         <option value="DE">Delaware</option>
         <option value="DC">Dist of Columbia</option>
@@ -75,7 +75,7 @@
         <option value="WI">Wisconsin</option>
         <option value="WY">Wyoming</option>
   </select>
-        <input class="input is-rounded" id= "search-input"type="text" placeholder="Search City">
+        <input class="input is-rounded" id="search-input" type="text" placeholder="Search City">
       <button class="button is-light btn" id="check">Get Data</button>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
