--- a/results.html
+++ b/results.html
@@ -15,7 +15,7 @@
     <section class="section-air">
         <div class="container">
             <h1 class="title results-title">Air Quality Data:</h1>
-        <div class="air-results"></div>
+        <div class="air-results" id="air-results"></div>
             <p class="subtitle">US Air Quality Index(AQI):
                 <br>
                 <p>
@@ -71,6 +71,7 @@
         </div>
       </section>
 
+    <script type="text/javascript" src="./assets/js/script.js"></script>
     <script type="text/javascript" src="./assets/js/results.js"></script>
 </body>
 </html>
