quality of life widget

--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
       <div class="columns">
         <div class="air-q" id="air-q"></div>
       </div>
+      <a class="teleport-widget-link" href="https://teleport.org/cities/aarhus/"
+      >Life quality score - Aarhus</a
+    >
+    <script
+      async
+      class="teleport-widget-script"
+      data-url="https://teleport.org/cities/aarhus/widget/scores/?currency=USD"
+      data-max-width="770"
+      data-height="969"
+      src="https://teleport.org/assets/firefly/widget-snippet.min.js"
+    ></script>
       <select name="state" size="1" id="state-select">
         <option value="AL">Alabama</option>
         <option value="AK">Alaska</option>
