--- a/results.html
+++ b/results.html
@@ -38,7 +38,7 @@
             </p>
     </section>
     <hr>
-    <section class="section-hospital">
+    <!-- <section class="section-hospital">
         <div class="container">
           <h1 class="title">Hospital Finder</h1>
           <p class="subtitle">
@@ -69,7 +69,7 @@
             </tr>
           </table>
         </div>
-      </section>
+      </section> -->
 
     <script type="text/javascript" src="./assets/js/script.js"></script>
     <script type="text/javascript" src="./assets/js/results.js"></script>
