--- a/results.html
+++ b/results.html
@@ -16,6 +16,7 @@
         <div class="container">
             <h1 class="title results-title">Air Quality Data:</h1>
         <div class="air-results" id="air-results"></div>
+        <div id="aqi-results"></div>
             <p class="subtitle">US Air Quality Index(AQI):
                 <br>
                 <p>
@@ -32,46 +33,12 @@
                 301+ = <span id="hazardous">Hazardous</span>    
                 </p>
                 <br>
-                <p class="subtitle">Visit a hospital near you if you have symptoms of chest tightness, burning eyes, or a cough.
-                    Children feel the effects of higher pollution levels more than adults. They also experience more illnesses, such as bronchitis and earaches, in areas of high pollution.    
-                </p>
+  
             </p>
     </section>
     <hr>
-    <!-- <section class="section-hospital">
-        <div class="container">
-          <h1 class="title">Hospital Finder</h1>
-          <p class="subtitle">
-            Closest hospitals near <strong>you</strong>!
-          </p>
-        </div>
-        <div class="hospital-list">
-          <table class="table">
-            <tr>
-              <th title="Name">Name</th>
-              <th title="Distance">Distance</th>
-              <th title="Contact Info">Contact Information</th>
-            </tr>
-            <tr>
-              <th class="name1"></th>
-              <th class="distance1"></th>
-              <th class="contact1"></th>
-            </tr>
-            <tr>
-              <th class="name2"></th>
-              <th class="distance2"></th>
-              <th class="contact2"></th>
-            </tr>
-            <tr>
-              <th class="name3"></th>
-              <th class="distance3"></th>
-              <th class="contact3"></th>
-            </tr>
-          </table>
-        </div>
-      </section> -->
 
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <script type="text/javascript" src="./assets/js/connect.js"></script>
     <script type="text/javascript" src="./assets/js/results.js"></script>
 </body>
 </html>
