add greenhouse gas

--- a/index.html
+++ b/index.html
@@ -81,19 +81,19 @@
       type="text"
       placeholder="Search City"
       />
-      <a href="./results.html"><button class="button is-light btn" id="check">Get Data</button></a>
+      <button class="button is-light btn" id="check">Get Data</button>
     </section>
     <a class="teleport-widget-link" href="https://teleport.org/cities/aarhus/"
       >Life quality score - Aarhus</a
     >
-    <script
+    <!-- <script
       async
       class="teleport-widget-script"
       data-url="https://teleport.org/cities/aarhus/widget/scores/?currency=USD"
       data-max-width="770"
       data-height="969"
       src="https://teleport.org/assets/firefly/widget-snippet.min.js"
-    ></script>
+    ></script> -->
     <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
   </html>
