--- a/results.html
+++ b/results.html
@@ -71,7 +71,7 @@
         </div>
       </section> -->
 
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+    <!-- <script type="text/javascript" src="./assets/js/script.js"></script> -->
     <script type="text/javascript" src="./assets/js/results.js"></script>
 </body>
 </html>
