--- a/results.html
+++ b/results.html
@@ -17,6 +17,9 @@
             <h1 class="title results-title">Air Quality Data:</h1>
         <div class="air-results" id="air-results"></div>
         <div id="aqi-results"></div>
+        <div id="local-results"></div>
+        <div id="local-aqi"></div>
+        <br>
             <p class="subtitle">US Air Quality Index(AQI):
                 <br>
                 <p>
@@ -33,12 +36,11 @@
                 301+ = <span id="hazardous">Hazardous</span>    
                 </p>
                 <br>
-  
             </p>
+        </div>
     </section>
     <hr>
 
-    <script type="text/javascript" src="./assets/js/connect.js"></script>
     <script type="text/javascript" src="./assets/js/results.js"></script>
 </body>
 </html>
