greenhouse gases console.log data

--- a/results.html
+++ b/results.html
@@ -40,6 +40,13 @@
         </div>
     </section>
     <hr>
+    <section class="section-greenhouse">
+        <div class="container">
+          <h1>Greenhouse Gases Data:</h1>
+          <div class="greenhouse-results" id="greenhouse-results"></div>
+          <div id="local-ghg-results"></div>
+        </div>
+    </section>
 
     <script type="text/javascript" src="./assets/js/connect.js"></script>
 
