--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Hospital Finder/Air Quality</title>
+    <title>Air Quality Comparison</title>
   </head>
   <body>
     <section class="section">
       <div class="container">
-        <h1 class="title">Air Quality Data</h1>
+        <h1 class="title">Air Quality/ Greenhouse Gas Data</h1>
         <p class="subtitle">
-          Find your local Air Quality <strong>data</strong>!
+          Find your local Air Quality/ Greenhouse Gas <strong>data</strong>!
         </p>
       </div>
       <div class="columns">
@@ -28,7 +28,7 @@
         <option value="AZ">Arizona</option>
         <option value="AR">Arkansas</option>
         <option value="CA">California</option>
-        <option value="Colorado">Colorado</option>
+        <option value="CO">Colorado</option>
         <option value="CT">Connecticut</option>
         <option value="DE">Delaware</option>
         <option value="DC">Dist of Columbia</option>
