Added functionality to greenhouse gases populating on page, and changed css and html accordingly

--- a/results.html
+++ b/results.html
@@ -17,11 +17,17 @@
             <h1 class="title results-title">Air Quality/ Greenhouse Gas Data:</h1>
         <div class="air-results" id="air-results"></div>
         <div id="aqi-results"></div>
-        <div id="greenhouse-results"></div>
+        <div id="greenhouse-ch4"></div>
+        <div id="greenhouse-co2"></div>
+        <div id="greenhouse-ozone"></div>
+        <div id="greenhouse-vapor"></div>
         <br>
         <div id="local-results"></div>
         <div id="local-aqi"></div>
-        <div id="local-ghg-results"></div>
+        <div id="local-ch4"></div>
+        <div id="local-co2"></div>
+        <div id="local-ozone"></div>
+        <div id="local-vapor"></div>
     
         <br>
             <p class="subtitle">US Air Quality Index(AQI):
@@ -53,14 +59,12 @@
                     <br>
                     <span id="dark-orange">5000 ppm</span> = Permissible exposure limit for daily workplace exposures
                     <br>
-                    <span id="red">>40000 ppm</span> = Level is immediately harmful due to Oygen deprivation
+                    <span id="red">>40000 ppm</span> = Level is immediately harmful due to Oxygen deprivation
                 </p>
                 
             </p>
         </div>
     </section>
-
-    <script type="text/javascript" src="./assets/js/connect.js"></script>
 
     <script type="text/javascript" src="./assets/js/results.js"></script>
 </body>
