Added home btn on results page, added function for btn in results.js, changed css accordingly

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Air Quality Comparison</title>
   </head>
-  <body>
+  <body class="index-body">
     <section class="section">
       <div class="container">
         <h1 class="title" id="index-title">Air Quality/ Greenhouse Gas Data</h1>
