--- a/results.html
+++ b/results.html
@@ -12,6 +12,7 @@
     <title>Air Quality Comparison</title>
 </head>
 <body>
+    <button class="button is-light btn" id="home">Home</button>
     <section class="section-air">
         <div class="container">
             <h1 class="title results-title">Air Quality/ Greenhouse Gas Data:</h1>
