Worked on css and html styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="index-html">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,7 +27,7 @@
       id="search-input"
       type="text"
       placeholder="Search City"
-    />
+      />
       <select name="state" size="1" id="state-select">
         <option value="AL">Alabama</option>
         <option value="AK">Alaska</option>
@@ -84,6 +84,8 @@
   
       <button class="button is-light btn" id="check">Get Data</button>
     </section>
+
+    <footer id="sticky-footer">Proudly made by Levi, Tori and Alviva</footer>
     
     <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
