--- a/results.html
+++ b/results.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="html-results">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -66,6 +66,7 @@
             </p>
         </div>
     </section>
+    <footer>Proudly made by Levi, Tori and Alviva</footer>
 
     <script type="text/javascript" src="./assets/js/results.js"></script>
 </body>
