--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <div class="columns">
         <div class="air-q" id="air-q"></div>
       </div>
+      <div class="input-container">
       <input
       size="30"
       id="search-input"
@@ -80,12 +81,11 @@
         <option value="WV">West Virginia</option>
         <option value="WI">Wisconsin</option>
         <option value="WY">Wyoming</option>
-      </select>
-  
+      </select><br>
+    </div>
       <button class="button is-light btn" id="check">Get Data</button>
-    </section>
 
-    <footer id="sticky-footer">Proudly made by Levi, Tori and Alviva</footer>
+    </section>
     
     <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
