JS results for color coding

--- a/results.html
+++ b/results.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class = html-results lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,14 +17,14 @@
         <div class="container">
             <h1 class="title results-title">Air Quality/ Greenhouse Gas Data:</h1>
         <div class="air-results" id="air-results"></div>
-        <div id="aqi-results"></div>
+        <div>Searched City Air Quality: <span id="aqi-results"></span></div>
         <div id="greenhouse-ch4"></div>
         <div id="greenhouse-co2"></div>
         <div id="greenhouse-ozone"></div>
         <div id="greenhouse-vapor"></div>
         <br>
         <div id="local-results"></div>
-        <div id="local-aqi"></div>
+        <div>Local Air Quality: <span id="local-aqi"></span></div>
         <div id="local-ch4"></div>
         <div id="local-co2"></div>
         <div id="local-ozone"></div>
