Add image to results page

--- a/results.html
+++ b/results.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
     <title>Air Quality Comparison</title>
 </head>
-<body>
+<body class="results-body">
     <button class="button is-light btn" id="home">Home</button>
     <section class="section-air">
         <div class="container">
